loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:19: error: 'while' expected but '}' found.
} while (sortieTrouvee())
^Poucet1:19: error: ';' expected but 'while' found.
} while (sortieTrouvee())
  ^